Minor test updates